--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ node_modules/
 
 # Игнорировать все .txt файлы в каталоге doc/ на всех уровнях вложенности
 doc/**/*.txt
+
+# Игнорировать файл INFO.md
+INFO.md
